--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,9 @@
 {% set version = "1.7.4" %}
 # see github.com/conda-forge/conda-forge.github.io/issues/1059 for naming discussion
 {% set faiss_proc_type = "cuda" if cuda_compiler_version != "None" else "cpu" %}
-
+{% if cuda_compiler_version is undefined %}
+    {% set cuda_compiler_version = "None" %}
+{% endif %}
 # headers for upstream-folders 'faiss/*.h', 'faiss/{impl,invlists,utils}/*.h',
 # see https://github.com/facebookresearch/faiss/blob/v{{ version }}/faiss/CMakeLists.txt;
 # gpu adds headers in 'faiss/gpu/*.h', 'faiss/gpu/{impl,utils}/*.(cu)?h'.
@@ -39,38 +41,8 @@
     'utils/simdlib_neon.h', 'utils/sorting.h', 'utils/utils.h',
 ] + (not win) * [
     'invlists/OnDiskInvertedLists.h'
-] + (cuda_compiler_version != "None") * [
-    'gpu/GpuAutoTune.h', 'gpu/GpuCloner.h', 'gpu/GpuClonerOptions.h', 'gpu/GpuDistance.h',
-    'gpu/GpuFaissAssert.h', 'gpu/GpuIcmEncoder.h', 'gpu/GpuIndex.h', 'gpu/GpuIndexBinaryFlat.h',
-    'gpu/GpuIndexFlat.h', 'gpu/GpuIndexIVF.h', 'gpu/GpuIndexIVFFlat.h', 'gpu/GpuIndexIVFPQ.h',
-    'gpu/GpuIndexIVFScalarQuantizer.h', 'gpu/GpuIndicesOptions.h', 'gpu/GpuResources.h',
-    'gpu/StandardGpuResources.h',
-    'gpu/impl/BinaryDistance.cuh', 'gpu/impl/BinaryFlatIndex.cuh', 'gpu/impl/BroadcastSum.cuh',
-    'gpu/impl/Distance.cuh', 'gpu/impl/DistanceUtils.cuh', 'gpu/impl/FlatIndex.cuh',
-    'gpu/impl/GeneralDistance.cuh', 'gpu/impl/GpuScalarQuantizer.cuh', 'gpu/impl/IVFAppend.cuh',
-    'gpu/impl/IVFBase.cuh', 'gpu/impl/IVFFlat.cuh', 'gpu/impl/IVFFlatScan.cuh',
-    'gpu/impl/IVFInterleaved.cuh', 'gpu/impl/IVFPQ.cuh', 'gpu/impl/IVFUtils.cuh',
-    'gpu/impl/IcmEncoder.cuh', 'gpu/impl/IndexUtils.h', 'gpu/impl/InterleavedCodes.h',
-    'gpu/impl/L2Norm.cuh', 'gpu/impl/L2Select.cuh', 'gpu/impl/PQCodeDistances-inl.cuh',
-    'gpu/impl/PQCodeDistances.cuh', 'gpu/impl/PQCodeLoad.cuh',
-    'gpu/impl/PQScanMultiPassNoPrecomputed-inl.cuh', 'gpu/impl/PQScanMultiPassNoPrecomputed.cuh',
-    'gpu/impl/PQScanMultiPassPrecomputed.cuh', 'gpu/impl/RemapIndices.h', 'gpu/impl/VectorResidual.cuh',
-    'gpu/impl/scan/IVFInterleavedImpl.cuh',
-    'gpu/utils/BlockSelectKernel.cuh', 'gpu/utils/Comparators.cuh',
-    'gpu/utils/ConversionOperators.cuh', 'gpu/utils/CopyUtils.cuh', 'gpu/utils/DeviceDefs.cuh',
-    'gpu/utils/DeviceTensor-inl.cuh', 'gpu/utils/DeviceTensor.cuh', 'gpu/utils/DeviceUtils.h',
-    'gpu/utils/DeviceVector.cuh', 'gpu/utils/Float16.cuh', 'gpu/utils/HostTensor-inl.cuh',
-    'gpu/utils/HostTensor.cuh', 'gpu/utils/Limits.cuh', 'gpu/utils/LoadStoreOperators.cuh',
-    'gpu/utils/MathOperators.cuh', 'gpu/utils/MatrixMult-inl.cuh', 'gpu/utils/MatrixMult.cuh',
-    'gpu/utils/MergeNetworkBlock.cuh', 'gpu/utils/MergeNetworkUtils.cuh',
-    'gpu/utils/MergeNetworkWarp.cuh', 'gpu/utils/NoTypeTensor.cuh', 'gpu/utils/Pair.cuh',
-    'gpu/utils/PtxUtils.cuh', 'gpu/utils/ReductionOperators.cuh', 'gpu/utils/Reductions.cuh',
-    'gpu/utils/Select.cuh', 'gpu/utils/StackDeviceMemory.h', 'gpu/utils/StaticUtils.h',
-    'gpu/utils/Tensor-inl.cuh', 'gpu/utils/Tensor.cuh', 'gpu/utils/ThrustUtils.cuh',
-    'gpu/utils/Timer.h', 'gpu/utils/Transpose.cuh', 'gpu/utils/WarpPackedBits.cuh',
-    'gpu/utils/WarpSelectKernel.cuh', 'gpu/utils/WarpShuffles.cuh',
-    'gpu/utils/blockselect/BlockSelectImpl.cuh', 'gpu/utils/warpselect/WarpSelectImpl.cuh'
-] %}
+]
+%}
 
 package:
   name: faiss-split
@@ -163,7 +135,6 @@ outputs:
         - liblapack
       run_constrained:
         - faiss-cpu ==9999999999  # [cuda_compiler_version != "None"]
-        - faiss-gpu ==9999999999  # [cuda_compiler_version == "None"]
         - faiss-proc =*={{ faiss_proc_type }}
 
     test:
@@ -202,7 +173,6 @@ outputs:
         - libgomp                             # [linux]
         - llvm-openmp                         # [osx]
         - python                              # [build_platform != target_platform]
-        - cross-python_{{ target_platform }}  # [build_platform != target_platform]
         - numpy                               # [build_platform != target_platform]
       host:
         - python
@@ -219,7 +189,6 @@ outputs:
         - {{ pin_compatible('numpy') }}
       run_constrained:
         - faiss-cpu ==9999999999  # [cuda_compiler_version != "None"]
-        - faiss-gpu ==9999999999  # [cuda_compiler_version == "None"]
         - faiss-proc =*={{ faiss_proc_type }}
 
     test:
@@ -265,16 +234,6 @@ outputs:
     requirements:
       run:
         - faiss ={{ version }}=*_cpu
-    test:
-      imports:
-        - faiss
-
-  - name: faiss-gpu
-    build:
-      skip: true  # [cuda_compiler_version == "None"]
-    requirements:
-      run:
-        - faiss ={{ version }}=*_cuda
     test:
       imports:
         - faiss
