--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -206,8 +206,8 @@ outputs:
       string: "py{{ PY_VER }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"                                                  # [cuda_compiler_version == "None"]
       string: "py{{ PY_VER }}cuda{{ cuda_compiler_version|replace(".", "") }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"  # [cuda_compiler_version != "None"]
       missing_dso_whitelist:  # [osx]
-        - _libfaiss_avx2_stage/lib/libfaiss_avx2.dylib  # [osx and x86_64]
-        - _libfaiss_generic_stage/lib/libfaiss.dylib  # [osx]
+        - $PREFIX/../_libfaiss_avx2_stage/lib/libfaiss_avx2.dylib  # [osx and x86_64]
+        - $PREFIX/../_libfaiss_generic_stage/lib/libfaiss.dylib  # [osx]
     requirements:
       build:
         - {{ compiler('cxx') }}
