--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -166,6 +166,7 @@ outputs:
         - llvm-openmp  14.0.6           # [osx]
         # MKL for win, linux-64, and osx-64. All require intel-openmp.
         - mkl 2023.1.0            # [linux64 or win or (osx and x86_64)]
+        - mkl-devel 2023.1.0      # [linux64 or win or (osx and x86_64)]
         - intel-openmp            # [linux64 or win or (osx and x86_64)]
       run:
         # Run dependencies follow the same logic as above.
@@ -229,11 +230,14 @@ outputs:
         - llvm-openmp  14.0.6           # [osx]
         # MKL for win, linux-64, and osx-64. All require intel-openmp.
         - mkl 2023.1.0            # [linux64 or win or (osx and x86_64)]
+        - mkl-devel 2023.1.0      # [linux64 or win or (osx and x86_64)]
         - intel-openmp            # [linux64 or win or (osx and x86_64)]
         - libfaiss ={{ version }}=*_{{ faiss_proc_type }}
         - libfaiss-avx2 ={{ version }}=*_{{ faiss_proc_type }}  # [x86_64]
       run:
         - python
+        - mkl 2023.1.0           # [linux64 or win or (osx and x86_64)]
+        - libopenblas    # [(osx and arm64) or linux-ppc64le or linux-s390x]
         - libfaiss ={{ version }}=*_{{ faiss_proc_type }}
         - libfaiss-avx2 ={{ version }}=*_{{ faiss_proc_type }}  # [x86_64]
         - {{ pin_compatible('numpy') }}
