Deactivate missing_dso_whitelist and update the generic build and host sections

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -110,16 +110,27 @@ build:
   number: 0
   skip: True # [py<38]
   skip: True # [linux and (s390x or ppc64le)]
-  missing_dso_whitelist:  # [osx]
-    - '*/libfaiss_avx2.dylib'  # [osx and x86_64]
-    - '*/libfaiss.dylib'  # [osx]
+    # missing_dso_whitelist:  # [osx]
+    # - '*/libfaiss_avx2.dylib'  # [osx and x86_64]
+    # - '*/libfaiss.dylib'  # [osx]
 
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
     - patch  # [not win]
     - m2-patch  # [win]
+    - cmake
+    - ninja
+  host:
+    - python
+    - libgomp  # [linux]
+    - llvm-openmp  # [osx]
+    - openblas 0.3.21         # [(osx and arm64) or linux-ppc64le or linux-s390x]
+    - mkl 2023.1.0            # [linux64 or win or (osx and x86_64)]
+    - mkl-devel 2023.1.0      # [win]
+    - intel-openmp            # [linux64 or win or (osx and x86_64)]
 
 outputs:
   # A meta-package to select CPU or GPU build for faiss.
@@ -213,9 +224,9 @@ outputs:
     build:
       string: "py{{ PY_VER }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"                                                  # [cuda_compiler_version == "None"]
       string: "py{{ PY_VER }}cuda{{ cuda_compiler_version|replace(".", "") }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"  # [cuda_compiler_version != "None"]
-      missing_dso_whitelist:  # [osx]
-        - '*/libfaiss_avx2.dylib'  # [osx and x86_64]
-        - '*/libfaiss.dylib'  # [osx]
+        #    missing_dso_whitelist:  # [osx]
+        # - '*/libfaiss_avx2.dylib'  # [osx and x86_64]
+        #- '*/libfaiss.dylib'  # [osx]
     requirements:
       build:
         - {{ compiler('c') }}
