--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -186,14 +186,14 @@ outputs:
         # MKL for win, linux-64, and osx-64. All require intel-openmp.
         - mkl 2023.1.0            # [linux64 or win or (osx and x86_64)]
           #- mkl-devel 2023.1.0      # [win]
-          #- intel-openmp            # [linux64 or win or (osx and x86_64)]
+        - intel-openmp            # [linux64 or win or (osx and x86_64)]
       run:
         # Run dependencies follow the same logic as above.
         - libopenblas            # [(osx and arm64) or linux-ppc64le or linux-s390x]
         #- libgomp                 # [linux]
         #- llvm-openmp             # [osx]
         - mkl 2023.1.*            # [linux64 or win or (osx and x86_64)]
-          #- intel-openmp            # [linux64 or win or (osx and x86_64)]
+        - {{ pin_compatible('intel-openmp') }}  # [linux64 or win or (osx and x86_64)]
       run_constrained:
         - faiss-cpu ==9999999999  # [cuda_compiler_version != "None"]
         - faiss-gpu ==9999999999  # [cuda_compiler_version == "None"]
