--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -108,7 +108,7 @@ source:
 
 build:
   number: 0
-  skip: True # [py<38]
+  skip: True # [py<38 or (py==38 and osx and x86_64)]
   skip: True # [linux and (s390x or ppc64le)]
 
 requirements:
@@ -118,17 +118,6 @@ requirements:
     - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
     - patch  # [not win]
     - m2-patch  # [win]
-      # - cmake
-      # - ninja
-      # host:
-      # - python
-      #- pip
-      #- libgomp  # [linux]
-      # - llvm-openmp  # [osx]
-      # - openblas 0.3.21         # [(osx and arm64) or linux-ppc64le or linux-s390x]
-      # - mkl 2023.1.0            # [linux64 or win or (osx and x86_64)]
-      # - mkl-devel 2023.1.0      # [win]
-      #- intel-openmp            # [linux64 or win or (osx and x86_64)]
 
 outputs:
   # A meta-package to select CPU or GPU build for faiss.
@@ -172,25 +161,22 @@ outputs:
         - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
         - cmake
         - ninja
+        # libgomp is required for linux-64 alongside intel-omp.
         - libgomp                 # [linux]
+        # llvm-openmp is required only for osx.
         - llvm-openmp  14.0.6     # [osx]
+        # mkl-devel is mainly required for win.
         - mkl-devel 2023.1.0      # [x86_64]
       host:
         - python
         # OpenBLAS + libgomp for osx-arm64, and linux-s390x and linux-ppc64le.
-        # libgomp is also required for linux-64 alongside intel-omp.
-        # llvm-openmp is required only for osx-arm64
         - openblas 0.3.21               # [(osx and arm64) or linux-ppc64le or linux-s390x]
-          #- libgomp                 # [linux]
-          #- llvm-openmp  14.0.6           # [osx]
         # MKL for win, linux-64, and osx-64. All require intel-openmp.
         - mkl 2023.1.0            # [linux64 or win or (osx and x86_64)]
-          #- mkl-devel 2023.1.0      # [win]
         - intel-openmp            # [linux64 or win or (osx and x86_64)]
       run:
         # Run dependencies follow the same logic as above.
         - libopenblas            # [(osx and arm64) or linux-ppc64le or linux-s390x]
-        #- libgomp                 # [linux]
         #- llvm-openmp             # [osx]
         - mkl 2023.1.*            # [linux64 or win or (osx and x86_64)]
         - {{ pin_compatible('intel-openmp') }}  # [linux64 or win or (osx and x86_64)]
@@ -233,8 +219,11 @@ outputs:
         - swig
         - cmake
         - ninja
+        # libgomp is required for linux-64 alongside intel-omp.
         - libgomp                 # [linux]
+        # llvm-openmp is required only for osx
         - llvm-openmp  14.0.6     # [osx]
+        # mkl-devel is mainly required for win.
         - mkl-devel 2023.1.0      # [x86_64]
       host:
         - python
@@ -244,21 +233,13 @@ outputs:
         - pip
         - numpy  {{ numpy }}
         # OpenBLAS + libgomp for osx-arm64, and linux-s390x and linux-ppc64le.
-        # libgomp is also required for linux-64 alongside intel-omp.
-        # llvm-openmp is required only for osx-arm64
         - openblas 0.3.21               # [(osx and arm64) or linux-ppc64le or linux-s390x]
-          #- libgomp                 # [linux]
-          # - llvm-openmp  14.0.6           # [osx]
         # MKL for win, linux-64, and osx-64. All require intel-openmp.
         - mkl 2023.1.0            # [linux64 or win or (osx and x86_64)]
-          #- mkl-devel 2023.1.0      # [win]
-          # - intel-openmp            # [linux64 or win or (osx and x86_64)]
         - libfaiss ={{ version }}=*_{{ faiss_proc_type }}
         - libfaiss-avx2 ={{ version }}=*_{{ faiss_proc_type }}  # [x86_64]
       run:
         - python
-          # - mkl 2023.1.*           # [linux64 or win or (osx and x86_64)]
-          # - libopenblas    # [(osx and arm64) or linux-ppc64le or linux-s390x]
         - libfaiss ={{ version }}=*_{{ faiss_proc_type }}
         - libfaiss-avx2 ={{ version }}=*_{{ faiss_proc_type }}  # [x86_64]
         - {{ pin_compatible('numpy') }}
