--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -124,6 +124,7 @@ outputs:
   - name: faiss-proc
     version: 1.0.0
     build:
+      skip: true  # [py==38 and osx and x86_64]
       string: {{ faiss_proc_type }}
     test:
       commands:
@@ -148,6 +149,7 @@ outputs:
     build:
       string: "h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"                                                  # [cuda_compiler_version == "None"]
       string: "cuda{{ cuda_compiler_version|replace(".", "") }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"  # [cuda_compiler_version != "None"]
+      skip: true  # [py==38 and osx and x86_64]
       run_exports:
         # faiss follows SemVer, so restrict packages built with libfaiss to use
         # at least the same version at runtime, but below the next major version.
@@ -173,13 +175,12 @@ outputs:
         - openblas 0.3.21               # [(osx and arm64) or linux-ppc64le or linux-s390x]
         # MKL for win, linux-64, and osx-64. All require intel-openmp.
         - mkl 2023.1.0            # [linux64 or win or (osx and x86_64)]
-        - intel-openmp            # [linux64 or win or (osx and x86_64)]
+        - intel-openmp            # [linux64 or win]
       run:
         # Run dependencies follow the same logic as above.
         - libopenblas            # [(osx and arm64) or linux-ppc64le or linux-s390x]
-        #- llvm-openmp             # [osx]
         - mkl 2023.1.*            # [linux64 or win or (osx and x86_64)]
-        - {{ pin_compatible('intel-openmp') }}  # [linux64 or win or (osx and x86_64)]
+        - {{ pin_compatible('intel-openmp') }}  # [linux64 or win]
       run_constrained:
         - faiss-cpu ==9999999999  # [cuda_compiler_version != "None"]
         - faiss-gpu ==9999999999  # [cuda_compiler_version == "None"]
@@ -209,6 +210,7 @@ outputs:
     script: build-pkg.sh          # [not win]
     script: build-pkg.bat         # [win]
     build:
+      skip: true  # [py==38 and osx and x86_64]
       string: "py{{ PY_VER|replace(".","") }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"                                                  # [cuda_compiler_version == "None"]
       string: "py{{ PY_VER|replace(".","") }}cuda{{ cuda_compiler_version|replace(".", "") }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"  # [cuda_compiler_version != "None"]
     requirements:
@@ -286,6 +288,7 @@ outputs:
   - name: faiss-cpu
     build:
       skip: true  # [cuda_compiler_version != "None"]
+      skip: true  # [py==38 and osx and x86_64]
     requirements:
       run:
         - faiss ={{ version }}=*_cpu
@@ -296,6 +299,7 @@ outputs:
   - name: faiss-gpu
     build:
       skip: true  # [cuda_compiler_version == "None"]
+      skip: true  # [py==38 and osx and x86_64]
     requirements:
       run:
         - faiss ={{ version }}=*_cuda
